// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WorkflowRunner rendering tests start step - test 1`] = `
<div>
  <div
    class="flex flex-col bg-background"
    data-testid="workflow-runner"
  >
    <div
      class="flex-1 overflow-y-auto p-6"
    >
      <div
        class="animate-in space-y-5 duration-200 fade-in-0 slide-in-from-bottom-2"
        data-testid="step-runner"
      >
        <div
          class="space-y-3 rounded-xl border bg-card p-6"
        >
          <h2
            class="text-xl font-bold text-foreground"
          >
            step-title-0
          </h2>
          <div
            class="flex items-start gap-2 rounded-md border border-blue-200 bg-blue-50 p-3 text-sm text-blue-800"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-info mt-0.5 h-4 w-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 16v-4"
              />
              <path
                d="M12 8h.01"
              />
            </svg>
            <span>
              step-hint-0
            </span>
          </div>
        </div>
        <div
          class="space-y-2"
          data-testid="standalone-step"
        >
          <div
            class="flex items-center justify-between"
          >
            <span
              class="text-sm font-medium text-muted-foreground"
            >
              Prompt
            </span>
            <button
              class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
              data-slot="tooltip-trigger"
              data-testid="copy-btn"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-copy size-4"
                data-testid="copy-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="14"
                  rx="2"
                  ry="2"
                  width="14"
                  x="8"
                  y="8"
                />
                <path
                  d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                />
              </svg>
              <span>
                Kopieren
              </span>
            </button>
            <div
              class="bg-foreground text-background animate-in fade-in-0 zoom-in-95 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=closed]:zoom-out-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 z-50 w-fit origin-(--radix-tooltip-content-transform-origin) rounded-md px-3 py-1.5 text-xs text-balance"
              data-slot="tooltip-content"
              data-testid="mock-tooltip-content"
              sideoffset="0"
            >
              In Zwischenablage kopieren
            </div>
          </div>
          <div
            class="rounded-xl bg-muted p-5"
          >
            <div
              class="font-mono text-sm leading-relaxed text-foreground"
              data-testid="react-md"
            >
              <div
                data-testid="react-markdown-mock"
              >
                content-0
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t bg-background px-6 py-4"
    >
      <div
        class="flex items-start justify-end gap-4"
        data-testid="workflow-navigation"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 shrink-0 cursor-pointer"
          data-slot="button"
          data-testid="previous-step-btn"
          disabled=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-left mr-1 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12 19-7-7 7-7"
            />
            <path
              d="M19 12H5"
            />
          </svg>
          Zurück
        </button>
        <div
          class="flex flex-col gap-2"
          data-tesiid="next-steps"
        >
          <button
            class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 px-4 py-2 has-[>svg]:px-3 group h-auto cursor-pointer justify-between text-left"
            data-slot="button"
            data-testid="next-step-btn"
          >
            <div>
              <span
                class="text-sm font-semibold"
              >
                Weiter
              </span>
              <p
                class="mt-0.5 text-xs font-normal text-muted-foreground"
              >
                → 
                step-title-1
              </p>
            </div>
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-right ml-3 h-4 w-4 shrink-0 text-muted-foreground transition-transform group-hover:translate-x-0.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="m12 5 7 7-7 7"
              />
            </svg>
          </button>
          <button
            class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 px-4 py-2 has-[>svg]:px-3 group h-auto cursor-pointer justify-between text-left"
            data-slot="button"
            data-testid="next-step-btn"
          >
            <div>
              <span
                class="text-sm font-semibold"
              >
                Abbrechen
              </span>
              <p
                class="mt-0.5 text-xs font-normal text-muted-foreground"
              >
                → 
                step-title-1
              </p>
            </div>
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-right ml-3 h-4 w-4 shrink-0 text-muted-foreground transition-transform group-hover:translate-x-0.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="m12 5 7 7-7 7"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkflowRunner rendering tests start stepn not defined - test 1`] = `
<div>
  <div
    class="flex h-full flex-col items-center justify-center gap-4 p-8 text-center"
    data-testid="workflow-steps-empty"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-triangle-alert h-12 w-12 text-yellow-500"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
      />
      <path
        d="M12 9v4"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
    <h2
      class="text-xl font-semibold"
    >
      Kein Startschritt definiert
    </h2>
    <a
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
      data-slot="button"
      data-testid="workflow-edit-btn"
      href="/workflows/workflow-id-0001/edit"
    >
      Zum Editor
    </a>
  </div>
</div>
`;

exports[`WorkflowRunner rendering tests steps empty - test 1`] = `
<div>
  <div
    class="flex h-full flex-col items-center justify-center gap-4 p-8 text-center"
    data-testid="workflow-steps-empty"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-triangle-alert h-12 w-12 text-yellow-500"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
      />
      <path
        d="M12 9v4"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
    <h2
      class="text-xl font-semibold"
    >
      Dieser Workflow enthält noch keine Schritte.
    </h2>
    <a
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
      data-slot="button"
      data-testid="workflow-edit-btn"
      href="/workflows/workflow-id-0001/edit"
    >
      Zum Editor
    </a>
  </div>
</div>
`;
